Internal bug 69 - Export Data always removes empty columns when it should just flag them as Excluded
- Added a new parameter to one of the MySQLDataTable constructors to set the RemoveEmptyColumns flag to be able to set it from the Export and Append forms. (Classes\MySQLDataTable.cs, Forms\AppendDataForm.cs, Forms\ExportDataForm.cs).
- Added an option to the Export Data's Advanced Options dialog to remove columns with no data, by default the Export Dialog will only flag those columns as Excluded. (Forms\ExportAdvancedOptionsDialog.cs, Forms\ExportAdvancedOptionsDialog.Designer.cs, Properties\Settings.Designer.cs, Properties\Settings.settings, Forms\ExportDataForm.cs).
- Added code to display a warning and paint a column red if the column name is not set, display a warning if the table name is not set, and stack warnings but not display them if a column is Excluded, warnings are displayed normally for columns if they are not Excluded anymore. (Forms\ExportDataForm.cs).
- Added code to prevent the Append and Export of Data if more than 1 selection is made (selecting more than 1 area holding the Ctrl key while selecting Excel cells). (Classes\TaskPaneControl.cs).
- Added resource strings for warning mentioned above. (Properties\Resources.Designer.cs, Properties\Resources.resx).

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -41,5 +41,8 @@
     <Setting Name="AppendLimitPreviewRowsQuantity" Provider="MySQL.ForExcel.MySQLForExcelSettings" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="ExportRemoveEmptyColumns" Provider="MySQL.ForExcel.MySQLForExcelSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
