--- a/source/app.config
+++ b/source/app.config
@@ -43,6 +43,9 @@
             <setting name="AppendLimitPreviewRowsQuantity" serializeAs="String">
                 <value>100</value>
             </setting>
+            <setting name="ExportRemoveEmptyColumns" serializeAs="String">
+                <value>False</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
