Work Item #412 - Refactor Panels code to comply with StyleCop rules.
- Refactored code in panels classes to comply with StyleCop rules and naming convention. (source/Forms/ExportDataForm.cs, source/Panels/AutoStyleableBasePanel.Designer.cs, source/Panels/DBObjectSelectionPanel.cs, source/Panels/DBObjectSelectionPanel.Designer.cs, source/Panels/DBObjectSelectionPanel.resx, source/Panels/SchemaSelectionPanel.Designer.cs, source/Panels/SchemaSelectionPanel.cs, source/Panels/SchemaSelectionPanel.resx, source/Panels/WelcomePanel.cs, source/Panels/WelcomePanel.resx).
- Refactored code in TaskPaneControl class to comply with StyleCop rules and naming convention. (source/Controls/TaskPaneControl.cs, source/Controls/TaskPaneControl.Designer.cs, source/Controls/TaskPaneControl.resx).
- Refactored code in ImportTableViewForm class to comply with StyleCop rules and naming convention. (source/Forms/ImportTableViewForm.cs, source/Forms/ImportTableViewForm.Designer.cs, source/Forms/ImportTableViewForm.resx)
- Fixed a warning produced after refactoring the ExportDataForm class. (source/Forms/ExportDataForm.cs, source/Forms/ExportDataForm.Designer.cs)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -216,6 +216,7 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="Classes\ActiveEditDialogContainer.cs" />
     <Compile Include="Classes\DBObject.cs" />
     <Compile Include="Classes\MySQLColumnMapping.cs" />
     <Compile Include="Classes\MySQLColumnMappingList.cs" />
