Bug #16495151 - EXPORT TABLE LINK IS NOT DISABLED WHEN DATA IS DELETED
- Moved the NativeWindowWrapper class from source/Controls/TaskPaneControl.cs to its own file. (source/Classes/NativeWindowWrapper.cs, source/MySQL.ForExcel.csproj).
- Extracted the logic that checks if an Excel range has any data and placed in the new ExcelRangeContainsAnyData method, so this gets called by the ExcelApplication_SheetSelectionChange event delegate method and also by the new ExcelApplication_SheetChange method fired when the contents of the current Excel selection change, so if the contents become empty the Append and Export data action labels get disabled. (source/Controls/TaskPaneControl.cs).

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -228,6 +228,7 @@
     </Compile>
     <Compile Include="Classes\MySQLForExcelConnectionsHelper.cs" />
     <Compile Include="Classes\MySQLForExcelSettings.cs" />
+    <Compile Include="Classes\NativeWindowWrapper.cs" />
     <Compile Include="Classes\Options.cs" />
     <Compile Include="Classes\PushResultsDataTable.cs">
       <SubType>Component</SubType>
