Bug #17272087 - MYSQL FOR EXCEL SIDEBAR DOES NOT APPEAR IN EXCEL 2013 (WITH WORKAROUND)
- Added support for Excel 2013 Single Document Interface, now that Excel 2013 creates 1 window per workbook also the Excel Add-In maintains an independent custom task pane in each window. (source/ThisAddIn.cs)
- Changed the behavior of the ribbon's toggle button to open/close the active Excel Add-In pane instead of just showing/hiding it. Also added support for Excel 2013 SDI model (i.e. do not assume a single custom task pane, but 1 per window). (source/Controls/ManageTaskPaneRibbon.cs)
- Renamed the TaskPaneControl class and files to ExcelAddInPane. (source/Controls/ExcelAddInPane.cs, source/Controls/ExcelAddInPane.Designer.cs, source/Controls/ExcelAddInPane.resx, source/Forms/EditDataDialog.cs, source/Panels/DBObjectSelectionPanel.cs, source/Panels/SchemaSelectionPanel.cs, source/Panels/WelcomePanel.cs, source/Panels/WelcomePanel.Designer.cs, source/MySQL.ForExcel.csproj)
- Moved the code that closes connections and active editing sessions from the CloseAddIn method to the Dispose method. (source/Controls/ExcelAddInPane.cs, source/Controls/ExcelAddInPane.Designer.cs)
- Fixed header comments for proper parsing and conversion from GPL > Commercial header. (source/Properties/AssemblyInfo.cs)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -242,6 +242,12 @@
     <Compile Include="Classes\PushResultsDataTable.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Controls\ExcelAddInPane.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ExcelAddInPane.Designer.cs">
+      <DependentUpon>ExcelAddInPane.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ManageTaskPaneRibbon.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -269,12 +275,6 @@
     </Compile>
     <Compile Include="Controls\SearchEdit.Designer.cs">
       <DependentUpon>SearchEdit.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\TaskPaneControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\TaskPaneControl.Designer.cs">
-      <DependentUpon>TaskPaneControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\TransparentLabel.cs">
       <SubType>UserControl</SubType>
@@ -381,6 +381,9 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <EmbeddedResource Include="Controls\ExcelAddInPane.resx">
+      <DependentUpon>ExcelAddInPane.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\HotLabel.resx">
       <DependentUpon>HotLabel.cs</DependentUpon>
     </EmbeddedResource>
@@ -389,9 +392,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\SearchEdit.resx">
       <DependentUpon>SearchEdit.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Controls\TaskPaneControl.resx">
-      <DependentUpon>TaskPaneControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
