MySQL Bug #68732, Bug #17191646 - QUERY TIMEOUT CANNOT BE ADJUSTED IN MYSQL FOR EXCEL
- Added the GlobalConnectionCommandTimeout and GlobalConnectionConnectionTimeout settings so users can override the connection timeout default values that the MySqlConnectionString object provides. (app.config, source/Properties/Settings.Designer.cs, source/Properties/Settings.settings)
- Created the GlobalOptionsDialog form to maintain the new timeout settings. (source/Forms/GlobalOptionsDialog.cs, source/Forms/GlobalOptionsDialog.Designer.cs, source/Forms/GlobalOptionsDialog.resx, source/MySQL.ForExcel.csproj)
- Added code and buttons to open the GlobalOptionsDialog from the schema and db object selection panels. (source/Panels/DBObjectSelectionPanel.cs, source/Panels/DBObjectSelectionPanel.Designer.cs, source/Panels/DBObjectSelectionPanel.resx, source/Panels/SchemaSelectionPanel.cs, source/Panels/DBObjectSelectionPanel.Designer.cs, source/Panels/DBObjectSelectionPanel.resx)
- Created the RefreshWbConnectionTimeouts method that is called after the user changes the timeout values stored in the settings file. This method is also called every time a new connection is opened to override the C/Net defaults. (source/Controls/ExcelAddInPane.cs)
- Fixed a cosmetic problem in the WelcomePanel where the panel above the connections tree was being displayed with a different color than the rest of the parent panel. (source/Panels/WelcomePanel.Designer.cs)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -303,6 +303,12 @@
     <Compile Include="Forms\AppendNewColumnMappingDialog.Designer.cs">
       <DependentUpon>AppendNewColumnMappingDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\GlobalOptionsDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\GlobalOptionsDialog.Designer.cs">
+      <DependentUpon>GlobalOptionsDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\EditDataRevertDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -404,6 +410,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AppendNewColumnMappingDialog.resx">
       <DependentUpon>AppendNewColumnMappingDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\GlobalOptionsDialog.resx">
+      <DependentUpon>GlobalOptionsDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EditDataRevertDialog.resx">
       <DependentUpon>EditDataRevertDialog.cs</DependentUpon>
