--- a/source/app.config
+++ b/source/app.config
@@ -46,6 +46,12 @@
             <setting name="ExportRemoveEmptyColumns" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="GlobalConnectionConnectionTimeout" serializeAs="String">
+                <value>15</value>
+            </setting>
+            <setting name="GlobalConnectionCommandTimeout" serializeAs="String">
+                <value>30</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
