--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -44,5 +44,11 @@
     <Setting Name="ExportRemoveEmptyColumns" Provider="MySQL.ForExcel.MySQLForExcelSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="GlobalConnectionConnectionTimeout" Provider="MySQL.ForExcel.MySQLForExcelSettings" Type="System.UInt32" Scope="User">
+      <Value Profile="(Default)">15</Value>
+    </Setting>
+    <Setting Name="GlobalConnectionCommandTimeout" Provider="MySQL.ForExcel.MySQLForExcelSettings" Type="System.UInt32" Scope="User">
+      <Value Profile="(Default)">30</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
