Bug #17354102 - ERROR IMPORTING TEXT VALUES TO EXCEL STARTING WITH AN EQUALS SIGN
- Added code to the ImportDataTableToExcelAtGivenCell method to escape text values that start with an equals sign by prepending an apostrophe to them, this in order for Excel to avoid treating those values as formulas. (source/Controls/ExcelAddInPane.cs)
- Added the ImportAdvancedOptionsDialog for the Import Data from Table and Import Data from Procedure operations to control the number of preview records and the option to escape text values starting with an equals sign. Added the ImportEscapeFormulaTextValues and ImportPreviewRowsQuantity properties maintained by the aforementioned dialog. (source/Forms/ImportAdvancedOptionsDialog.cs, source/Forms/ImportAdvancedOptionsDialog.Designer.cs, source/Forms/ImportAdvancedOptionsDialog.resx, source/MySQL.ForExcel.csproj, source/Properties/Settings.Designer.cs, source/Properties/Settings.settings, source/app.config)
- Changed the code for some dialogs to execute upon form closing rathern than upon the accept button click for consistency. (source/Forms/AppendAdvancedOptionsDialog.cs, source/Forms/AppendAdvancedOptionsDialog.Designer.cs, source/Forms/AppendAdvancedOptionsDialog.resx, source/Forms/ExportAdvancedOptionsDialog.cs, source/Forms/ExportAdvancedOptionsDialog.Designer.cs, source/Forms/ExportAdvancedOptionsDialog.resx, source/Forms/GlobalOptionsDialog.cs, source/Forms/GlobalOptionsDialog.Designer.cs, source/Forms/GlobalOptionsDialog.resx)
- Renamed 2 methods to be consistent with the way the tables involved in an Append operation are named (Source Table and Target Table). (source/Forms/AppendDataForm.cs)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -315,6 +315,12 @@
     <Compile Include="Forms\EditDataRevertDialog.Designer.cs">
       <DependentUpon>EditDataRevertDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ImportAdvancedOptionsDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ImportAdvancedOptionsDialog.Designer.cs">
+      <DependentUpon>ImportAdvancedOptionsDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ImportProcedureForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -416,6 +422,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EditDataRevertDialog.resx">
       <DependentUpon>EditDataRevertDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ImportAdvancedOptionsDialog.resx">
+      <DependentUpon>ImportAdvancedOptionsDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ImportProcedureForm.resx">
       <DependentUpon>ImportProcedureForm.cs</DependentUpon>
