--- a/source/app.config
+++ b/source/app.config
@@ -52,6 +52,12 @@
             <setting name="GlobalConnectionCommandTimeout" serializeAs="String">
                 <value>30</value>
             </setting>
+            <setting name="ImportPreviewRowsQuantity" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="ImportEscapeFormulaTextValues" serializeAs="String">
+                <value>True</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
