--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -50,5 +50,11 @@
     <Setting Name="GlobalConnectionCommandTimeout" Provider="MySQL.ForExcel.MySQLForExcelSettings" Type="System.UInt32" Scope="User">
       <Value Profile="(Default)">30</Value>
     </Setting>
+    <Setting Name="ImportPreviewRowsQuantity" Provider="MySQL.ForExcel.MySQLForExcelSettings" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
+    <Setting Name="ImportEscapeFormulaTextValues" Provider="MySQL.ForExcel.MySQLForExcelSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
