- Moved some extension methods from MySQL for Excel to the Utility, since 1 of them was needed to fix a bug in the InfoDialog and others are used in MySQL for Excel but can be useful later for other projects. (Source/Classes/Utilities.cs) - Updated the consumer of the extension methods moved to the MySQL.Utility.dll. (source/Controls/HotLabel.cs, source/Controls/MyTreeView.cs, source/Controls/TransparentLabel.cs, source/Forms/AppendDataForm.cs) - Updated the MySQL.Utility.dll with the latest one. (source/libraries/MySQL.Utility.dll) - Created individual class files for the classes contained in the Utilities.cs and renamed that one to MiscUtilities.cs. (source/Classes/DataTypeUtilities.cs, source/Classes/MiscUtilities.cs, source/Classes/MySQLDataUtilities.cs, source/MySQL.ForExcel.csproj)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -228,7 +228,9 @@
   -->
   <ItemGroup>
     <Compile Include="Classes\ActiveEditDialogContainer.cs" />
+    <Compile Include="Classes\DataTypeUtilities.cs" />
     <Compile Include="Classes\DBObject.cs" />
+    <Compile Include="Classes\MiscUtilities.cs" />
     <Compile Include="Classes\MySQLColumnMapping.cs" />
     <Compile Include="Classes\MySQLColumnMappingList.cs" />
     <Compile Include="Classes\MySQLDataColumn.cs">
@@ -237,6 +239,7 @@
     <Compile Include="Classes\MySQLDataTable.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Classes\MySQLDataUtilities.cs" />
     <Compile Include="Classes\MySQLForExcelSettings.cs" />
     <Compile Include="Classes\NativeWindowWrapper.cs" />
     <Compile Include="Classes\PushResultsDataTable.cs">
@@ -257,7 +260,6 @@
     <Compile Include="Controls\PreviewDataGridView.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Classes\Utilities.cs" />
     <Compile Include="Controls\HotLabel.cs">
       <SubType>UserControl</SubType>
     </Compile>
