Work Item #446 - Import Data dumps dumps column names in spreadsheet without colors like Edit Data does
- Added code to the ImportDataTableToExcelAtGivenCell method to set the coloring of Excel cells containing column names from an Import Data operation to the same color used in Edit Data operations. (source/Controls/ExcelAddInPane.cs)
- Moved code to manipulate Excel objects (Excel.Range, Excel.Worksheet and RangeAndAddress objects) from the EditDataDialog and ExcelAddInPane classes to the ExcelUtilities class in order to reuse them in other places and updated their consumers. (source/Classes/ExcelUtilities.cs, source/Classes/MySQLDataTable.cs, source/Classes/RangeAndAddress.cs, source/Controls/ExcelAddInPane.cs, source/Forms/EditDataDialog.cs)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Classes\ActiveEditDialogContainer.cs" />
     <Compile Include="Classes\DataTypeUtilities.cs" />
     <Compile Include="Classes\DBObject.cs" />
+    <Compile Include="Classes\ExcelUtilities.cs" />
     <Compile Include="Classes\MiscUtilities.cs" />
     <Compile Include="Classes\MySQLColumnMapping.cs" />
     <Compile Include="Classes\MySQLColumnMappingList.cs" />
@@ -245,6 +246,7 @@
     <Compile Include="Classes\PushResultsDataTable.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Classes\RangeAndAddress.cs" />
     <Compile Include="Controls\ExcelAddInPane.cs">
       <SubType>UserControl</SubType>
     </Compile>
