--- a/source/app.config
+++ b/source/app.config
@@ -58,6 +58,9 @@
             <setting name="ImportEscapeFormulaTextValues" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ConvertedSettingsStoredMappingsCasing" serializeAs="String">
+                <value>False</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
