Work Item #730 - Edit Workbench connections direclty from MySQL for ExcelAddinFilter
- Added a new Edit Connections context menu to the connections tree view in the Welcome Panel that opens a dialog for users to edit the connection and save the changes. (source/Panels/WelcomePanel.cs, source/Panels/WelcomePanel.Designer.cs, source/Panels/WelcomePanel.resx)
- Added the edit.png image for the new context menu item. (source/MySQL.ForExcel.csproj, source/Properties/Resources.Designer.cs, source/Properties/Resources.resx, source/Resources/edit.png)
- Reflected this new feature in the CHANGES file. (CHANGES)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -512,6 +512,7 @@
     <Content Include="Resources\ArrowRight.png" />
     <None Include="Resources\DeleteHS.png" />
     <None Include="Resources\clear_output.png" />
+    <None Include="Resources\edit.png" />
     <Content Include="Resources\mysql-for-excel.ico" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-24x24.png" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-Disabled-24x24.png" />
